<resources>
    <string name="app_name">loginSystem</string>
    <string name="login_title">登陆界面</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密     码：</string>
    <string name="login_etname">请输入用户名</string>
    <string name="login_etpass">请输入密码</string>
    <string name="login_repass">记住密码</string>
    <string name="login_autologin">自动登录</string>
    <string name="login_registbtn">注册</string>
    <string name="login_loginbtn">登陆</string>
</resources>
